# prime_Xiong_Junchen

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/prime_jx2545/: index.doctree
docs/_build/doctrees/autoapi/prime_jx2545/prime_jx2545/: index.doctree
docs/_build/doctrees/autoapi/prime_jx2545checkpoint/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/prime_jx2545/: prime_jx2545.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_jx2545/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_jx2545/prime_jx2545/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_jx2545checkpoint/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/prime_jx2545/: index.html
docs/_build/html/autoapi/prime_jx2545/prime_jx2545/: index.html
docs/_build/html/autoapi/prime_jx2545checkpoint/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/prime_jx2545/: __init__.py  prime_jx2545.py
tests/: test_prime_jx2545.py
