[tool.poetry]
name = "prime_jx2545"
version = "0.1.0"
description = "Junchen's hw07 test package for mds_fall2023"
authors = ["Junchen Xiong"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
