[tool.poetry]
name = "prime_jx2545"
version = "0.1.0"
description = "Junchen's hw07 test package for mds_fall2023"
authors = ["Junchen Xiong"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
myst-nb = "1.0.0rc0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
